--- a/Portfolio-vuejs3-tailwind-main/package.json
+++ b/Portfolio-vuejs3-tailwind-main/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.4.37",
     "vue-router": "^4.5.0",
     "vue3-carousel": "^0.3.4"
