--- a/Portfolio-vuejs3-tailwind-main/package.json
+++ b/Portfolio-vuejs3-tailwind-main/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "vue": "^3.5.13",
+    "vue-pdf": "^1.2.4",
     "vue-router": "^4.5.0",
     "vue3-carousel": "^0.3.4"
   },
